<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_maker"
        android:icon="@drawable/ic_add_pdf"
        android:visible="false"
        android:title="@string/title_maker" />
    <item
        android:id="@+id/navigation_editor"
        android:icon="@drawable/ic_edit_pdf"
        android:visible="false"
        android:title="@string/title_editor" />
    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/ic_scan"
        android:title="@string/title_scanner" />
    <item
        android:id="@+id/navigation_files"
        android:icon="@drawable/ic_folder"
        android:title="@string/title_files" />
</menu>